--- a/style.css
+++ b/style.css
@@ -2,3 +2,4 @@ h2{color: red;}
 .section { background-colorfont-palette: light}
 #step{color: coral}
 h2{font-size: 300%;color: aqua}
+h3{font-family: "American Typewriter";color: blue}
